finish create user
